--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,19 @@ aniso8601==8.0.0
 appdirs==1.4.3
 astroid==2.3.2
 attrs==19.3.0
+autopep8==1.4.4
 black==19.10b0
+blinker==1.4
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.7
 flask-restplus==0.13.0
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.14.2
+idna==2.8
 importlib-metadata==0.23
 isort==4.3.21
 itsdangerous==1.1.0
@@ -17,16 +25,22 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 mongoengine==0.18.2
 more-itertools==7.2.0
+mysqlclient==1.4.6
 pathspec==0.6.0
+pycodestyle==2.5.0
 pylint==2.4.3
 pymongo==3.9.0
+PyMySQL==0.9.3
 pyrsistent==0.15.5
 pytz==2019.3
 regex==2019.11.1
+requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.11
 toml==0.10.0
 typed-ast==1.4.0
+urllib3==1.25.7
 Werkzeug==0.16.0
 wrapt==1.11.2
+WTForms==2.2.1
 zipp==0.6.0
