--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.3.1
 aniso8601==8.0.0
 appdirs==1.4.3
 astroid==2.3.2
@@ -10,8 +11,10 @@ chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Mail==0.9.1
+Flask-Migrate==2.5.2
 Flask-RESTful==0.3.7
 flask-restplus==0.13.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
 idna==2.8
@@ -21,8 +24,10 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.1.1
 lazy-object-proxy==1.4.3
+Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+migrate==0.3.8
 mongoengine==0.18.2
 more-itertools==7.2.0
 mysqlclient==1.4.6
@@ -32,6 +37,8 @@ pylint==2.4.3
 pymongo==3.9.0
 PyMySQL==0.9.3
 pyrsistent==0.15.5
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 regex==2019.11.1
 requests==2.22.0
