--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.3.1
+blinker==1.4
 Click==7.0
 Flask==1.1.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
@@ -8,6 +10,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mysqlclient==1.4.6
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.13.0
