--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,21 @@ services:
   app:
     build: .
     entrypoint: ./entrypoint/app.sh
-    links:
-      - db
-      - redis
     ports:
       - "5000:5000"
     volumes:
       - .:/AuthManager
+
+  redis:
+    image: redis:latest
+    hostname: redis
+
+  worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    hostname: worker
+    command: celery -A run.celery worker --loglevel=info
 
   db:
     image: mysql:5.6
@@ -18,10 +26,3 @@ services:
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_DATABASE: apnaschoolmysqldb
-  redis:
-    image: redis:latest
-
-  worker:
-    build:
-      context: .
-    command: celery -A app.celery worker --loglevel=info
